tests/sksl/errors/UseWithoutInitializeVarDecl.sksl
void var_decl()         { int x; int y = x; }
